; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_quota.c_isc_quota_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_quota.c_isc_quota_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isc_quota_detach(i32** %0) #0 {
  %2 = alloca i32**, align 8
  store i32** %0, i32*** %2, align 8
  %3 = load i32**, i32*** %2, align 8
  %4 = icmp ne i32** %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32**, i32*** %2, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br label %9

9:                                                ; preds = %5, %1
  %10 = phi i1 [ false, %1 ], [ %8, %5 ]
  %11 = zext i1 %10 to i32
  %12 = call i32 @INSIST(i32 %11)
  %13 = load i32**, i32*** %2, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @isc_quota_release(i32* %14)
  %16 = load i32**, i32*** %2, align 8
  store i32* null, i32** %16, align 8
  ret void
}

declare dso_local i32 @INSIST(i32) #1

declare dso_local i32 @isc_quota_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
